<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_translate"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_g_translate_white_24dp"
            app:iconGravity="textStart"
            app:iconSize="55dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_kosakata"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kosakata"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_translate_white_24dp"
            app:iconGravity="textStart"
            app:iconSize="55dp"
            app:layout_constraintTop_toTopOf="@+id/btn_translate"
            app:layout_constraintStart_toEndOf="@+id/btn_translate"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_word"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_word"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_add_to_photos_white_24dp"
            app:iconGravity="textStart"
            app:iconSize="55dp"
            app:layout_constraintTop_toTopOf="@+id/btn_kosakata"
            app:layout_constraintStart_toEndOf="@+id/btn_kosakata"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_help"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_help_outline_white_24dp"
            app:iconGravity="textStart"
            app:iconSize="55dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate"
            app:layout_constraintStart_toStartOf="@+id/btn_translate"
            app:layout_constraintEnd_toEndOf="@+id/btn_translate"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_developer"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_person_white_24dp"
            app:iconGravity="textStart"
            app:iconSize="55dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_kosakata"
            app:layout_constraintStart_toStartOf="@+id/btn_kosakata"
            app:layout_constraintEnd_toEndOf="@+id/btn_kosakata"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_log_out"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/ic_power_settings_new_black_24dp"
            app:iconGravity="textStart"
            app:iconSize="55dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_word"
            app:layout_constraintEnd_toEndOf="@+id/btn_add_word"
            app:layout_constraintStart_toStartOf="@+id/btn_add_word"/>
    <!--activity_main_bottom_content_-->
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_terjemahkan"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_bottom_content_terjemahkan"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate"
            app:layout_constraintStart_toStartOf="@+id/btn_translate"
            app:layout_constraintEnd_toEndOf="@+id/btn_translate"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_kosakata"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_kosakata"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate"
            app:layout_constraintStart_toStartOf="@+id/btn_kosakata"
            app:layout_constraintEnd_toEndOf="@+id/btn_kosakata"
            />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_add_word"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tambah_kata"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_translate"
            app:layout_constraintStart_toStartOf="@+id/btn_add_word"
            app:layout_constraintEnd_toEndOf="@+id/btn_add_word"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_help"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_bottom_content_bantuan"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_help"
            app:layout_constraintStart_toStartOf="@+id/btn_translate"
            app:layout_constraintEnd_toEndOf="@+id/btn_translate"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_developer"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_bottom_content_developer"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_help"
            app:layout_constraintStart_toStartOf="@+id/btn_developer"
            app:layout_constraintEnd_toStartOf="@+id/btn_log_out"/>

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_log_out"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_bottom_content_keluar"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_help"
            app:layout_constraintStart_toStartOf="@+id/btn_log_out"
            app:layout_constraintEnd_toEndOf="@+id/btn_log_out"/>


</androidx.constraintlayout.widget.ConstraintLayout>

